--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -21,6 +21,10 @@ eureka:
   instance:
     instance-id: payment8001 #实例名称
     ip-address: true #是否显示ip
+    #Euraka客户端向服务端发送心跳的时间间隔，单位为秒（默认30S）
+    lease-renewal-interval-in-seconds: 1
+    #Eureka服务端在收到最后一次心跳后等待时间上限，单位为秒（默认90S），超时将剔除服务
+    lease-expiration-duration-in-seconds: 2
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
